--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Navneet Pandey
 locale:           en_US
-url: http://localhost:4000
+url: http://imnpandey.github.io
 
 
 # Jekyll configuration
