add https url in config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Navneet Pandey
 locale:           en_US
-url: http://navneetpandey.com
+url: https://navneetpandey.com
 
 
 # Jekyll configuration
